# mavapf

./: CMakeLists.txt
include/mavapf/: host.h  mavapf.h  parameter.h  plugin.h
src/: parameter.cpp  plugin.cpp
src/impl/: vst2.cpp
testing/: pluginTest.cpp
